# ros2_control_bug_example

./: .gitignore  README.md
docker/: .dockerignore  .gitignore  README.md
docker/ros-example-env/: .bashrc  Dockerfile  docker-compose.yml  git_config_setup.sh  git_config_setup.sh.example
install/: local_setup.sh  setup.sh
install/example_pkg/share/example_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/example_pkg/share/example_pkg/cmake/: example_pkgConfig.cmake
install/kr_robot_description/share/kr_robot_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kr_robot_description/share/kr_robot_description/kr810/config/: kr810_controllers_1.yaml
install/kr_robot_description/share/kr_robot_description/kr810/urdf/: kr810_description.urdf.xacro
install/kr_robot_driver/lib/kr_robot_driver/: send_trajectory
install/kr_robot_driver/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: kr_robot_driver
install/kr_robot_driver/share/kr_robot_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kr_robot_driver/share/kr_robot_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake
log/: latest_build
src/example_pkg/: CMakeLists.txt
src/example_pkg/config/: spawn_table.yaml
src/example_pkg/launch/: control_kr810.launch.py  sim.launch.py  spawn_kr810.launch.py  spawn_table.launch.py  test.launch.py
(+1 files in other folders)
